--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ a {
 .navigation-bar__logo img {
   width: 100%;
   position: absolute;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
 }
 
 .navigation-bar__graphic-item a {
