--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ a {
 }
 
 /* suggestions */
-.suggestions {
+.suggestions-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template: 1fr;
@@ -174,14 +174,33 @@ a {
 .suggestions-image_right img {
   width: 100%;
 }
-.suggestions-image_left {
+.container_left {
   grid-column-start: 1;
   grid-column-end: 2;
   position: relative;
-  border-top: 1px solid white;
-  border-right: 1px solid white;
+  border-top: 2px solid white;
+  border-right: 2px solid white;
 }
-.suggestions-image_left img::after {
+
+.suggestions-image_left::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 99%;
+  opacity: 1;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7));
+  transition: all 1s ease-in-out;
+}
+.container_right {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  position: relative;
+  border-top: 2px solid white;
+  border-left: 2px solid white;
+}
+.suggestions-image_right::after {
   content: "";
   position: absolute;
   top: 0;
@@ -189,15 +208,11 @@ a {
   width: 100%;
   height: 100%;
   opacity: 1;
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7));
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.2),
+    rgba(255, 255, 255, 0.7)
+  );
   transition: all 1s ease-in-out;
-}
-.suggestions-image_right {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  position: relative;
-  border-top: 1px solid white;
-  border-left: 1px solid white;
 }
 .text-suggestions {
   position: absolute;
@@ -220,4 +235,63 @@ a {
 }
 .btn_dark {
   border: 4px solid var(--middle-grey);
+}
+
+/* stories */
+
+.uppercase h2 {
+  color: var(--white);
+  font-size: 3vw;
+  margin: 0;
+}
+.uppercase {
+  position: sticky;
+  top: 3vw;
+  left: 25vw;
+  width: 50vw;
+}
+.stories {
+  background: var(--dark-grey);
+  overflow: scroll;
+  width: 100vw;
+  position: relative;
+}
+.stories-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.stories-item {
+  display: flex;
+  flex-flow: column nowrap;
+  margin: 5rem 2rem 0 2rem;
+}
+.stories-item_text {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  color: var(--white);
+}
+
+.stories-item_text h4 {
+  text-align: center;
+  margin: 0;
+  font-weight: 900;
+}
+
+.stories-item_text p {
+  text-align: center;
+  margin: 1rem 0;
+}
+.stories-item_image {
+  border: 3px solid var(--white);
+  border-radius: 50%;
+}
+.stories-item_image img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 2px solid var(--dark-grey);
+  display: block;
 }
