--- a/style.css
+++ b/style.css
@@ -110,22 +110,34 @@ a {
 }
 
 /* intro */
+.intro {
+  overflow: hidden;
+}
 .intro-video {
   position: relative;
+  transition: all 3s ease-in-out;
 }
 .intro-video video {
   width: 100%;
+  display: block;
+}
+.intro-video:hover {
+  transform: scale(1.1);
 }
 .intro-video:after {
+  opacity: 0;
+  transition: opacity ease-in-out 3s;
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 1;
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7));
-  transition: all 1s ease-in-out;
+}
+
+.intro-video:hover:after {
+  opacity: 1;
 }
 
 .intro-video a {
@@ -167,66 +179,67 @@ a {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template: 1fr;
+  grid-gap: 2px;
 }
-.suggestions-image_left img {
+.suggestions-image img {
   width: 100%;
+  display: block;
 }
-.suggestions-image_right img {
-  width: 100%;
-}
-.suggestions-image_left {
+
+.suggestions-image {
   transition: all 3s ease-in-out;
 }
-.suggestions-image_left:hover {
-  transform: scale(1.25);
+.suggestions-image:hover {
+  transform: scale(1.1);
 }
-.suggestions-image_right {
-  transition: all 3s ease-in-out;
-}
-.suggestions-image_right:hover {
-  transform: scale(1.25);
-}
+
 .container_left {
   grid-column-start: 1;
   grid-column-end: 2;
   position: relative;
   border-top: 2px solid white;
-  border-right: 2px solid white;
+  border-bottom: 2px solid white;
   overflow: hidden;
 }
 
-.suggestions-image_left::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 99%;
-  opacity: 1;
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7));
-  transition: all 1s ease-in-out;
-}
-.container_right {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  position: relative;
-  border-top: 2px solid white;
-  border-left: 2px solid white;
-  overflow: hidden;
-}
-.suggestions-image_right::after {
+.suggestions-image:after {
+  opacity: 0;
+  transition: all ease-in-out 3s;
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7));
+}
+.suggestions-image:hover:after {
   opacity: 1;
+}
+.container_right {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  position: relative;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  overflow: hidden;
+}
+.light::after {
+  opacity: 0;
+  transition: opacity ease-in-out 3s;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: linear-gradient(
     rgba(255, 255, 255, 0.2),
     rgba(255, 255, 255, 0.7)
   );
-  transition: all 1s ease-in-out;
+}
+.suggestions-image .light:hover:after {
+  opacity: 1;
 }
 .text-suggestions {
   position: absolute;
@@ -431,17 +444,67 @@ a {
 
 .xplainer {
   position: relative;
+  display: block;
+  overflow: hidden;
 }
 .xplainer-image {
   max-width: 100%;
   object-fit: cover;
+  transition: all 3s ease-in-out;
+}
+.xplainer-image img {
+  max-width: 100%;
   display: block;
 }
-
+.xplainer-image:hover {
+  transform: scale(1.1);
+}
 .xplainer-video {
   max-width: 100%;
   object-fit: cover;
   display: block;
+  transition: all 3s ease-in-out;
+}
+.xplainer-video video {
+  max-width: 100%;
+  display: block;
+}
+.xplainer-video:hover {
+  transform: scale(1.1);
+}
+.xplainer-image:after {
+  opacity: 0;
+  transition: opacity ease-in-out 3s;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7));
+}
+.xplainer-video:after {
+  opacity: 0;
+  transition: opacity ease-in-out 3s;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7));
+}
+.lightbg:after {
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.2),
+    rgba(255, 255, 255, 0.7)
+  );
+}
+.xplainer-image:hover:after {
+  opacity: 1;
+}
+.xplainer-video:hover:after {
+  opacity: 1;
 }
 
 .xplainer-text {
