--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ a {
   --light-grey: #f8f8f8;
   --middle-grey: #4d4d4d;
   --dark-grey: #262626;
+  --insta-blue: #3897f0;
 }
 .btn {
   padding: 1rem 2.5rem;
@@ -563,4 +564,217 @@ a {
 }
 .social .headline_text p {
   margin: 0;
+}
+
+/* social */
+.instagram {
+  background: var(--light-grey);
+}
+.instagram_screen {
+  background: var(--white);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  max-width: 400px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+}
+.insta_image {
+  max-width: 400px;
+}
+.insta_header {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  max-width: 400px;
+}
+.insta_bmwlogo img {
+  width: 100%;
+  display: block;
+}
+.insta_bmwlogo {
+  padding: 0.6rem;
+  width: 4rem;
+}
+.insta_bmwlogo:hover {
+  opacity: 0.5;
+}
+.insta_name-logo {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0rem;
+  margin: 0;
+  position: relative;
+}
+.insta_image img {
+  width: 100%;
+}
+.insta_image p {
+  font-weight: 600;
+  color: #3897f0;
+  font-size: 14px;
+  padding-left: 1rem;
+}
+.insta_image p:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+.insta_name {
+  margin: 0.3rem 0;
+  color: #000;
+}
+.insta_name:hover {
+  text-decoration: underline;
+}
+.insta_followers {
+  margin: 0.3rem 0;
+  color: #999;
+  line-height: 14px;
+  font-size: 12px;
+}
+.insta_name {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.Sprite {
+  display: inline-block;
+}
+.Sprite,
+.hidden,
+.hideText {
+  overflow: hidden;
+  text-indent: -99999em;
+}
+.VerifiedSprite {
+  margin: 0;
+  width: 2rem;
+  margin-left: 0.5rem;
+  margin-bottom: -0.5rem;
+}
+.embedSpriteVerifiedBadgeSmall {
+  background: url("https://www.instagram.com/static/bundles/es6/sprite_embed_2x_031e3f72ab64.png/031e3f72ab64.png")
+    no-repeat;
+  background-size: 172px 160px;
+  background-position: -136px -112px;
+}
+.insta_btn {
+  background: var(--insta-blue);
+  border-radius: 3px;
+  color: var(--white);
+  font-weight: 600;
+  align-self: center;
+  margin-right: 10px;
+  padding: 5px 12px;
+  text-decoration: none;
+}
+.insta_btn:hover {
+  background-color: #1372cc;
+  cursor: pointer;
+}
+.insta-likes {
+  border-top: 1px solid lightgray;
+  max-width: 370px;
+  margin: 0 auto;
+}
+.insta-likes p {
+  margin: 0;
+  font-weight: 600;
+}
+.insta-likes_symbols {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.insta-likes_symbols > a {
+  margin: 0.5rem 0;
+}
+.left {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+.left a {
+  margin: 0.5rem 0.5rem 0 0;
+}
+.left:hover .LikeSprite {
+  display: none;
+}
+.left:hover .LikeSpriteHover {
+  display: block;
+}
+.embedSpriteHeartOpen {
+  background-image: url(https://www.instagram.com/static/bundles/es6/sprite_embed_2x_031e3f72ab64.png/031e3f72ab64.png);
+  background-size: 172px 160px;
+  background-position: -136px -87px;
+  background-repeat: no-repeat;
+  height: 24px;
+  width: 24px;
+}
+
+.embedSpriteHeartOpenRed {
+  background-image: url(https://www.instagram.com/static/bundles/es6/sprite_embed_2x_031e3f72ab64.png/031e3f72ab64.png);
+  background-size: 172px 160px;
+  background-position: 0 -136px;
+  background-repeat: no-repeat;
+  height: 24px;
+  width: 24px;
+  display: none;
+}
+
+.embedSpriteComment {
+  background-image: url(https://www.instagram.com/static/bundles/es6/sprite_embed_2x_031e3f72ab64.png/031e3f72ab64.png);
+  background-size: 172px 160px;
+  background-position: -136px -37px;
+  background-repeat: no-repeat;
+  height: 24px;
+  width: 24px;
+}
+.embedSpriteComment:hover {
+  opacity: 0.5;
+}
+.embedSpriteShare {
+  background-image: url(https://www.instagram.com/static/bundles/es6/sprite_embed_2x_031e3f72ab64.png/031e3f72ab64.png);
+  background-size: 172px 160px;
+  background-position: -50px -136px;
+  background-repeat: no-repeat;
+  height: 24px;
+  width: 24px;
+}
+.embedSpriteSaveOpen {
+  background-image: url(https://www.instagram.com/static/bundles/es6/sprite_embed_2x_031e3f72ab64.png/031e3f72ab64.png);
+  background-repeat: no-repeat;
+  background-size: 172px 160px;
+  background-position: -25px -136px;
+  height: 24px;
+  width: 24px;
+}
+.insta_comments {
+  border-top: 1px solid lightgray;
+  margin-top: 0.5rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  color: var(--dark-grey);
+  height: 130px;
+}
+.insta_comments p {
+  margin-left: 0.5rem;
+  font-size: 1rem;
+  opacity: 0.5;
+  cursor: pointer;
+}
+.insta-logo {
+  background-image: url(https://www.instagram.com/static/bundles/es6/sprite_embed_2x_031e3f72ab64.png/031e3f72ab64.png);
+  background-repeat: no-repeat;
+  background-size: 172px 160px;
+  background-position: -136px -62px;
+  height: 24px;
+  width: 24px;
+  margin: 1rem;
+}
+.insta-logo:hover {
+  opacity: 0.5;
+  cursor: pointer;
 }
