--- a/style.css
+++ b/style.css
@@ -596,6 +596,9 @@ a {
   grid-row-start: 1;
   grid-row-end: 2;
 }
+
+/* instagram */
+
 .instagram_screen {
   background: var(--white);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -623,6 +626,7 @@ a {
 .insta_bmwlogo:hover {
   opacity: 0.5;
 }
+
 .insta_name-logo {
   display: flex;
   flex-flow: row nowrap;
@@ -809,4 +813,173 @@ a {
 .insta-logo:hover {
   opacity: 0.5;
   cursor: pointer;
+}
+/* facebook */
+
+.facebook_screen {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  max-width: 400px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  background: #000;
+}
+.face_header {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.75) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.face_header_logo-name {
+  margin: 0.5rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.face_header_logo-name img {
+  width: 100%;
+}
+.face_header_icon {
+  background-image: url(https://www.facebook.com/rsrc.php/v3/yP/r/DrU6JVmMfES.png);
+  width: 24px;
+  height: 24px;
+  background-position: 0 -25px;
+  margin: 0.5rem;
+}
+.face_header_name {
+  color: var(--white);
+  margin-left: 0.5rem;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+}
+.face_header_name h4 {
+  font-weight: bold;
+  margin: 0;
+}
+.face_header_name h4:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: url(https://www.facebook.com/rsrc.php/v3/yX/r/IVMq4QsMI9W.png);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: 1px -171px;
+  height: 17px;
+  margin-left: 3px;
+  vertical-align: -4px;
+  width: 17px;
+  display: inline-block;
+}
+.face_header_name a {
+  font-size: 0.8rem;
+  margin: 0;
+  color: var(--white);
+}
+.face_header_name a:hover {
+  text-decoration: underline;
+}
+.face_image img {
+  width: 100%;
+  display: block;
+}
+.face_image {
+  padding: 0 0.5rem;
+}
+.face_likes {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.75) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+.face_likes-icons {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  margin-bottom: 1rem;
+  margin-left: 0.5rem;
+}
+.face_likes-thumb {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: center;
+  margin-right: 1rem;
+}
+.thumb {
+  background-image: url(https://www.facebook.com/rsrc.php/v3/yP/r/DrU6JVmMfES.png);
+  background-size: auto;
+  background-repeat: no-repeat;
+  display: inline-block;
+  height: 1rem;
+  width: 1rem;
+  display: inline-block;
+  background-position: 0 -135px;
+}
+.thumb-amount {
+  color: var(--white);
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin-left: 0.4rem;
+  margin-top: 0.1rem;
+}
+.face_likes-comments {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: center;
+  margin-right: 1rem;
+}
+.comment {
+  background-image: url(https://www.facebook.com/rsrc.php/v3/yP/r/DrU6JVmMfES.png);
+  background-size: auto;
+  background-repeat: no-repeat;
+  display: inline-block;
+  height: 1rem;
+  width: 1rem;
+  display: inline-block;
+  background-position: 0 -84px;
+}
+.comment-amount {
+  color: var(--white);
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin-left: 0.4rem;
+  margin-top: 0.1rem;
+}
+.face_likes-shares {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: center;
+  margin-right: 1rem;
+}
+.share {
+  background-image: url(https://www.facebook.com/rsrc.php/v3/yP/r/DrU6JVmMfES.png);
+  background-size: auto;
+  background-repeat: no-repeat;
+  display: inline-block;
+  height: 1rem;
+  width: 1rem;
+  display: inline-block;
+  background-position: 0 -186px;
+}
+.share-amount {
+  color: var(--white);
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin-left: 0.4rem;
+  margin-top: 0.1rem;
 }
