--- a/style.css
+++ b/style.css
@@ -578,19 +578,19 @@ a {
   margin: 5rem auto;
   grid-gap: 2rem;
 }
-.col_left {
+.instagram_screen.col_left {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 2;
 }
-.col_mid {
+.instagram_screen.col_mid {
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
 }
-.col_right {
+.instagram_screen.col_right {
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 1;
@@ -824,6 +824,19 @@ a {
   position: relative;
   background: #000;
 }
+.facebook_screen.col_left {
+  align-self: start;
+}
+.facebook_screen.col_mid {
+  background: var(--white);
+}
+.facebook_screen.col_mid p {
+  font-size: 0.9rem;
+  line-height: 1.2rem;
+  padding: 1rem;
+}
+.facebook_screen.col_mid {
+}
 .face_header {
   display: flex;
   flex-flow: row nowrap;
@@ -890,10 +903,21 @@ a {
   width: 100%;
   display: block;
 }
-.face_image {
+.image-left {
   padding: 0 0.5rem;
 }
 .face_likes {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  /* background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.75) 0%,
+    rgba(0, 0, 0, 0) 100%
+  ); */
+}
+.col_left .face_likes {
   position: absolute;
   bottom: 0;
   left: 0;
