--- a/style.css
+++ b/style.css
@@ -597,6 +597,24 @@ a {
   grid-row-start: 1;
   grid-row-end: 2;
 }
+.facebook_screen.col_left {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+.facebook_screen.col_mid {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+.facebook_screen.col_right {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
 
 /* instagram */
 
