--- a/style.css
+++ b/style.css
@@ -1073,3 +1073,150 @@ a {
   margin-left: 0.4rem;
   margin-top: 0.1rem;
 }
+
+/* twitter */
+
+.twitter_screen {
+  background: var(--white);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  max-width: 400px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 1%;
+}
+.twitter_image {
+  max-width: 400px;
+}
+.twitter_header {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 400px;
+}
+.twitter_bmwlogo img {
+  width: 100%;
+  display: block;
+}
+.twitter_bmwlogo {
+  padding: 0.6rem;
+  width: 4rem;
+}
+.twitter_bmwlogo:hover {
+  opacity: 0.5;
+}
+.twitter_name:hover {
+  color: #2b7bb9;
+}
+.twitter_name-logo {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0rem;
+  margin: 0;
+  position: relative;
+}
+.twitter_image img {
+  width: 100%;
+}
+.twitter_image:hover {
+  cursor: pointer;
+}
+.twitter_image {
+  width: 90%;
+  margin: 0 auto;
+  border-radius: 1%;
+}
+.twitter_image p {
+  font-weight: 600;
+  color: #3897f0;
+  font-size: 14px;
+  padding-left: 1rem;
+}
+.twitter_image p:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+.twitter_name {
+  margin: 0;
+  color: #000;
+  font-size: 0.9rem;
+}
+.twitter_name:hover {
+  text-decoration: underline;
+}
+.twitter_followers {
+  margin: 0;
+  color: #999;
+  line-height: 14px;
+  font-size: 12px;
+}
+.twitter_name {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.twitter_logo {
+  padding: 1rem;
+  color: #2693ff;
+}
+.twitter_text {
+  font-size: 0.9rem;
+  line-height: 1.2rem;
+  padding: 0 1rem 0 1rem;
+}
+.twitter_text p {
+  margin: 0 0 1rem 0;
+}
+.twitter_text p > a {
+  color: #2b7bb9;
+}
+.twitter-likes {
+  max-width: 370px;
+  margin: 0 1rem;
+}
+
+.twitter-likes_symbols {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.twitter-likes_symbols p {
+  font-size: 0.8rem;
+  color: #999;
+  margin-right: 1rem;
+}
+.twitter-likes_symbols > a {
+  margin: 0.5rem 0;
+  color: #999;
+  font-size: 0.8rem;
+}
+.twitter_comments {
+  border-top: 1px solid lightgray;
+  margin: 0.5rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--dark-grey);
+}
+
+
+
+
+.twitter-likes_symbols .embedSpriteHeartOpen {
+  transform: scale(0.6);
+}
+
+.embedSpriteHeartOpenRed {
+  transform: scale(0.6);
+}
+.twitter_comments .embedSpriteComment {
+  transform: scale(0.6);
+}
+.twitter_comments p {
+  color: #2b7bb9;
+  font-size: 0.8rem;
+}
