--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 }
 @font-face {
   font-family: "BMWTypeWebLightAll";
-  src: url("/etc/designs/bmwcom/base/fonts/BMWTypeWebLightAll.woff")
+  src: url("https://www.bmw.com/etc/designs/bmwcom/base/fonts/BMWTypeWebBoldAll.woff2")
     format("woff2");
 }
 body {
@@ -41,10 +41,10 @@ a {
   background: var(--light-grey);
 }
 .navigation-bar {
-  display: flex;
-  flex-flow: row nowrap;
+  /* display: flex;
+  flex-flow: row nowrap; */
   max-width: 1100px;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   margin: 0 auto;
   z-index: 1;
   position: relative;
@@ -1528,7 +1528,7 @@ a {
   }
 }
 
-@media (min-width: 700px) {
+@media screen and (min-width: 700px) {
   .intro-video.square {
     display: none;
   }
